[tool.poetry]
name = "music-thing"
version = "0.1.0"
description = ""
authors = ["Eric Fulmer <eric.r.fulmer@gmail.com>"]
readme = "README.md"
packages = [{include = "music_thing"}]

[tool.poetry.dependencies]
python = "3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
