[tool.poetry]
name = "music-thing"
version = "0.1.0"
description = ""
authors = ["Eric Fulmer <eric.r.fulmer@gmail.com>"]
readme = "README.md"
packages = [{include = "music_thing"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"
ipdb = "^0.13.9"
flake8 = "^5.0.4"
isort = "^5.10.1"
black = "^22.8.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
